Fix contrast ratio alignment

--- a/css/sass/components/_containers.scss
+++ b/css/sass/components/_containers.scss
@@ -101,7 +101,7 @@
   position: absolute;
   text-align: center; 
   left:0;
-  bottom:55%;
+  top:$gem4;
   width:100%;
   line-height: 90%;
   font-family: $font-Montserrat, sans-serif;
